Update docs with training results and HF model links

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ WANDB_ENTITY=your_wandb_username_or_team
 # Lambda Labs Configuration
 LAMBDA_API_KEY=your_lambda_api_key_here
 
+# Hugging Face Hub Configuration
+HF_TOKEN=your_huggingface_token_here
+
 # Optional: Set to "offline" to run wandb in offline mode
 # WANDB_MODE=offline
