--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
   },
 
   "training": {
-    "num_train_steps": 500,
+    "num_train_steps": 1000,
     "per_device_train_batch_size": 8,
     "per_device_eval_batch_size": 8,
     "learning_rate": 1e-4,
@@ -79,6 +79,6 @@
   "eval": {
     "temperature": 0.1,
     "num_samples_to_save": 20,
-    "eval_at_steps": [0, 250, 500]
+    "eval_at_steps": [0, 250, 500, 750, 1000]
   }
 }
